welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:4: error: reassignment to val
	talking=false
               ^parotTrouble:6: error: reassignment to val
}else{talking=true}
             ^